--- a/src/app/modules/customer/component/region/region.component.html
+++ b/src/app/modules/customer/component/region/region.component.html
@@ -38,6 +38,14 @@
     		</table>
     	</div>
     </div>
+
+    <div class="card-footer text-muted">
+		<button (click)="reloadTable()" style="float: right" type="button" class="btn btn-info btn-sm">
+      		<i class="bi bi-arrow-repeat"></i>
+      	</button>
+      	<br>
+      	<br>
+    </div>
 </div>
 
 <div class="modal" tabindex="-1" id="region_modal">
@@ -65,7 +73,9 @@
         			<div>
         				<br>
         				<p class="text-right"><span class="text-danger">*</span> Campos obligatorios.</p>
-        				<button type="submit" class="btn btn-success btn-block">Registrar</button>
+        				<button type="submit" class="btn btn-success btn-block" [disabled]="isDisabled">
+        					{{ button_text }}
+        				</button>
         			</div>
         		</form>
       		</div>
