--- a/src/app/modules/layout/component/nav/nav.component.html
+++ b/src/app/modules/layout/component/nav/nav.component.html
@@ -1,12 +1,12 @@
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-light bg-ejercicio3-2">
     <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="#!">MEROLICO</a>
+        <a class="navbar-brand" href="">MEROLICO</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Principal</a></li>
-                <li class="nav-item"><a class="nav-link" href="#!">Nosotros</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" routerLink="">Principal</a></li>
+                <!--<li class="nav-item"><a class="nav-link" href="#!">Nosotros</a></li>-->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Tienda</a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -16,18 +16,21 @@
                         <li><a class="dropdown-item" href="#!">Novedades</a></li>
                     </ul>
                 </li>
-    <li class="nav-item"><a class="nav-link" href="#!">Favoritos</a></li>
-    <li class="nav-item dropdown">
+                <!--<li class="nav-item"><a class="nav-link" href="#!">Favoritos</a></li>-->
+                <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Ofertas</a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="#!">Hombre</a></li>
                         <li><a class="dropdown-item" href="#!">Mujer</a></li>
                         <li><a class="dropdown-item" href="#!">Niños</a></li>
-        <li><a class="dropdown-item" href="#!">Niñas</a></li>
-        <li><a class="dropdown-item" href="#!">Bebés</a></li>
+                        <li><a class="dropdown-item" href="#!">Niñas</a></li>
+                        <li><a class="dropdown-item" href="#!">Bebés</a></li>
                     </ul>
                 </li>
-    <li class="nav-item"><a class="nav-link" href="#!">Preguntas Frecuentes</a></li>
+                <li class="nav-item"><a class="nav-link" href="#!">Preguntas Frecuentes</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/region">Regiones</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/exchange-rate">Exchange</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/category">Categorías</a></li>
             </ul>
             <form class="d-flex">
                 <button class="btn btn-outline-ejercicio5" onclick="finalizaCompra()" type="submit">
