--- a/src/app/modules/layout/component/nav/nav.component.html
+++ b/src/app/modules/layout/component/nav/nav.component.html
@@ -27,10 +27,11 @@
                         <li><a class="dropdown-item" href="#!">Bebés</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="#!">Preguntas Frecuentes</a></li>
+                <!--<li class="nav-item"><a class="nav-link" href="#!">Preguntas Frecuentes</a></li>-->
                 <li class="nav-item"><a class="nav-link" routerLink="/region">Regiones</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="/exchange-rate">Exchange</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="/category">Categorías</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/customer">Clientes</a></li>
             </ul>
             <form class="d-flex">
                 <button class="btn btn-outline-ejercicio5" onclick="finalizaCompra()" type="submit">
