--- a/src/app/modules/layout/component/nav/nav.component.html
+++ b/src/app/modules/layout/component/nav/nav.component.html
@@ -32,6 +32,7 @@
                 <li class="nav-item"><a class="nav-link" routerLink="/exchange-rate">Exchange</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="/category">Categorías</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="/customer">Clientes</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/product">Productos</a></li>
             </ul>
             <form class="d-flex">
                 <button class="btn btn-outline-ejercicio5" onclick="finalizaCompra()" type="submit">
