--- a/src/app/modules/product/component/product/product.component.html
+++ b/src/app/modules/product/component/product/product.component.html
@@ -83,7 +83,7 @@
         				</div>
         			</div>
         			<div class="form-group">
-        				<label for="rate">Ingresa el precio<span class="text-danger">*</span></label>
+        				<label for="rate">Ingresa la descripción<span class="text-danger">*</span></label>
         				<textarea rows="2" type="text" class="form-control marginForm" id="description" formControlName="description" placeholder="Descripción..."></textarea>
         			</div>
         			<div class="form-group">
